syntax = "proto3";

package event.v1;

option go_package="./backend/eventservice/internal/infra/grpc/pb";

service EventService{
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse){}
    rpc GetEvent(GetEventRequest) returns (GetEventResponse){}
    rpc GetFeed(GetFeedByLocationRequest) returns(GetFeedByLocationResponse){}
}

message Empty {}

message Event{
    string id=1;
    string title=2;
    string category =3;
    Location Location=4;
}

message Location{
    string city =1;
}

message CreateEventRequest{
    string user_id=1;
    Event event = 2;

}
message CreateEventResponse{
    bool status=1;
    string message=2;
}

message GetEventRequest{
    string event_id=1; 
    string event_city=2;  
}

message GetEventResponse{
    Event event = 1;
}

message GetFeedByLocationRequest{
     Location location = 1;
}
message GetFeedByLocationResponse{
     repeated Event event =1;
}



